[gd_scene load_steps=2 format=2]

[ext_resource path="res://FrameWork/Fight/FightGestureController.gd" type="Script" id=1]

[node name="FightActionController" type="Node2D"]
script = ExtResource( 1 )

[node name="attack_indicator" type="Node2D" parent="."]
visible = false

[node name="up" type="Line2D" parent="attack_indicator"]
points = PoolVector2Array( 0, 0, 17, -10 )
width = 1.0
default_color = Color( 0.4, 1, 0.607843, 1 )

[node name="mid" type="Line2D" parent="attack_indicator"]
points = PoolVector2Array( 0, 0, 17, 10 )
width = 1.0

[node name="y" type="Line2D" parent="attack_indicator"]
points = PoolVector2Array( 0, -10, 0, 10 )
width = 1.0
default_color = Color( 0.0509804, 0.0705882, 0.168627, 1 )

[node name="heavy_attack_indicator_nouse" type="Node2D" parent="."]
visible = false

[node name="mid_1" type="Line2D" parent="heavy_attack_indicator_nouse"]
points = PoolVector2Array( -10, 5, 10, 5 )
width = 1.0
default_color = Color( 0.4, 1, 0.564706, 1 )

[node name="mid_2" type="Line2D" parent="heavy_attack_indicator_nouse"]
points = PoolVector2Array( -10, -5, 10, -5 )
width = 1.0
default_color = Color( 0.4, 1, 0.564706, 1 )

[node name="up_1" type="Line2D" parent="heavy_attack_indicator_nouse"]
points = PoolVector2Array( -10, -15, 10, -15 )
width = 1.0
default_color = Color( 0.207843, 0.521569, 0.290196, 1 )

[node name="up_2" type="Line2D" parent="heavy_attack_indicator_nouse"]
points = PoolVector2Array( -10, 15, 10, 15 )
width = 1.0
default_color = Color( 0.207843, 0.521569, 0.290196, 1 )

[node name="up_up_1" type="Line2D" parent="heavy_attack_indicator_nouse"]
points = PoolVector2Array( -10, -25, 10, -25 )
width = 1.0
default_color = Color( 0.0941176, 0.239216, 0.137255, 1 )

[node name="up_up_2" type="Line2D" parent="heavy_attack_indicator_nouse"]
points = PoolVector2Array( -10, 25, 10, 25 )
width = 1.0
default_color = Color( 0.0941176, 0.239216, 0.137255, 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="heavy_attack_indicator" type="Node2D" parent="."]

[node name="up" type="Line2D" parent="heavy_attack_indicator"]
points = PoolVector2Array( 0, 0, 17, -10 )
width = 1.0
default_color = Color( 0.4, 1, 0.607843, 1 )

[node name="mid" type="Line2D" parent="heavy_attack_indicator"]
points = PoolVector2Array( 0, 0, 17, 10 )
width = 1.0

[node name="y" type="Line2D" parent="heavy_attack_indicator"]
points = PoolVector2Array( 0, -10, 0, 10 )
width = 1.0
default_color = Color( 0.0509804, 0.0705882, 0.168627, 1 )

[node name="Line2D" type="Line2D" parent="heavy_attack_indicator"]
points = PoolVector2Array( -5, 0, 5, 0 )
width = 7.0
default_color = Color( 0.952941, 1, 0.4, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
